force-app/main/default/objects/dataDriverInformation__c/dataDriverInformation__c.object-meta.xml
<CustomObject>
    <label>Driver Information</label>
    <nameField>
        <label>Driver Information</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Driver Information</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>