force-app/main/default/objects/dataDriverInformation__c/fields/batchFileType__c.field-meta.xml
<CustomField>
    <fullName>batchFileType__c</fullName>
    <label>batchFileType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>