force-app/main/default/objects/dataDriverInformation__c/fields/cte2__c.field-meta.xml
<CustomField>
    <fullName>cte2__c</fullName>
    <label>cte2</label>
    <type>Phone</type>
</CustomField>