force-app/main/default/objects/dataDriverInformation__c/fields/ctel__c.field-meta.xml
<CustomField>
    <fullName>ctel__c</fullName>
    <label>ctel</label>
    <type>Phone</type>
</CustomField>