force-app/main/default/objects/dataDriverInformation__c/fields/ema2__c.field-meta.xml
<CustomField>
    <fullName>ema2__c</fullName>
    <label>ema2</label>
    <type>Email</type>
</CustomField>