force-app/main/default/objects/dataDriverInformation__c/fields/emai__c.field-meta.xml
<CustomField>
    <fullName>emai__c</fullName>
    <label>emai</label>
    <type>Email</type>
</CustomField>