force-app/main/default/objects/dataDriverInformation__c/fields/fax2__c.field-meta.xml
<CustomField>
    <fullName>fax2__c</fullName>
    <label>fax2</label>
    <type>Phone</type>
</CustomField>