force-app/main/default/objects/dataDriverInformation__c/fields/fsc2__c.field-meta.xml
<CustomField>
    <fullName>fsc2__c</fullName>
    <label>fsc2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>