force-app/main/default/objects/dataDriverInformation__c/fields/fsc__c.field-meta.xml
<CustomField>
    <fullName>fsc__c</fullName>
    <label>fsc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>