force-app/main/default/objects/dataDriverInformation__c/fields/fsd2__c.field-meta.xml
<CustomField>
    <fullName>fsd2__c</fullName>
    <label>fsd2</label>
    <type>Date</type>
</CustomField>