force-app/main/default/objects/dataDriverInformation__c/fields/fsd__c.field-meta.xml
<CustomField>
    <fullName>fsd__c</fullName>
    <label>fsd</label>
    <type>Date</type>
</CustomField>