force-app/main/default/objects/dataDriverInformation__c/fields/fsn2__c.field-meta.xml
<CustomField>
    <fullName>fsn2__c</fullName>
    <label>fsn2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>