force-app/main/default/objects/dataDriverInformation__c/fields/fsn__c.field-meta.xml
<CustomField>
    <fullName>fsn__c</fullName>
    <label>fsn</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>