force-app/main/default/objects/dataDriverInformation__c/fields/fso2__c.field-meta.xml
<CustomField>
    <fullName>fso2__c</fullName>
    <label>fso2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>