force-app/main/default/objects/dataDriverInformation__c/fields/fso__c.field-meta.xml
<CustomField>
    <fullName>fso__c</fullName>
    <label>fso</label>
    <length>255</length>
    <type>Text</type>
</CustomField>