force-app/main/default/objects/dataDriverInformation__c/fields/gbo2__c.field-meta.xml
<CustomField>
    <fullName>gbo2__c</fullName>
    <label>gbo2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>