force-app/main/default/objects/dataDriverInformation__c/fields/geb2__c.field-meta.xml
<CustomField>
    <fullName>geb2__c</fullName>
    <label>geb2</label>
    <type>Date</type>
</CustomField>