force-app/main/default/objects/dataDriverInformation__c/fields/geb__c.field-meta.xml
<CustomField>
    <fullName>geb__c</fullName>
    <label>geb</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>