force-app/main/default/objects/dataDriverInformation__c/fields/gebo__c.field-meta.xml
<CustomField>
    <fullName>gebo__c</fullName>
    <label>gebo</label>
    <type>Date</type>
</CustomField>