force-app/main/default/objects/dataDriverInformation__c/fields/laed__c.field-meta.xml
<CustomField>
    <fullName>laed__c</fullName>
    <label>laed</label>
    <type>Date</type>
</CustomField>