force-app/main/default/objects/dataDriverInformation__c/fields/nad1__c.field-meta.xml
<CustomField>
    <fullName>nad1__c</fullName>
    <label>nad1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>