force-app/main/default/objects/dataDriverInformation__c/fields/nad2__c.field-meta.xml
<CustomField>
    <fullName>nad2__c</fullName>
    <label>nad2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>