force-app/main/default/objects/dataDriverInformation__c/fields/pti1__c.field-meta.xml
<CustomField>
    <fullName>pti1__c</fullName>
    <label>pti1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>