force-app/main/default/objects/dataDriverInformation__c/fields/pti2__c.field-meta.xml
<CustomField>
    <fullName>pti2__c</fullName>
    <label>pti2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>