force-app/main/default/objects/dataDriverInformation__c/fields/rpc2__c.field-meta.xml
<CustomField>
    <fullName>rpc2__c</fullName>
    <label>rpc2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>