force-app/main/default/objects/dataDriverInformation__c/fields/rpc__c.field-meta.xml
<CustomField>
    <fullName>rpc__c</fullName>
    <label>rpc</label>
    <type>Phone</type>
</CustomField>