force-app/main/default/objects/dataDriverInformation__c/fields/rpd2__c.field-meta.xml
<CustomField>
    <fullName>rpd2__c</fullName>
    <label>rpd2</label>
    <type>Date</type>
</CustomField>