force-app/main/default/objects/dataDriverInformation__c/fields/rpd__c.field-meta.xml
<CustomField>
    <fullName>rpd__c</fullName>
    <label>rpd</label>
    <type>Date</type>
</CustomField>