force-app/main/default/objects/dataDriverInformation__c/fields/rpn2__c.field-meta.xml
<CustomField>
    <fullName>rpn2__c</fullName>
    <label>rpn2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>