force-app/main/default/objects/dataDriverInformation__c/fields/rpn__c.field-meta.xml
<CustomField>
    <fullName>rpn__c</fullName>
    <label>rpn</label>
    <length>255</length>
    <type>Text</type>
</CustomField>