force-app/main/default/objects/dataDriverInformation__c/fields/rpo2__c.field-meta.xml
<CustomField>
    <fullName>rpo2__c</fullName>
    <label>rpo2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>