force-app/main/default/objects/dataDriverInformation__c/fields/rpo__c.field-meta.xml
<CustomField>
    <fullName>rpo__c</fullName>
    <label>rpo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>