force-app/main/default/objects/dataDriverInformation__c/fields/tel2__c.field-meta.xml
<CustomField>
    <fullName>tel2__c</fullName>
    <label>tel2</label>
    <type>Phone</type>
</CustomField>