force-app/main/default/objects/dataDriverInformation__c/fields/tel__c.field-meta.xml
<CustomField>
    <fullName>tel__c</fullName>
    <label>tel</label>
    <type>Phone</type>
</CustomField>