force-app/main/default/objects/dataDriverInformation__c/fields/www2__c.field-meta.xml
<CustomField>
    <fullName>www2__c</fullName>
    <label>www2</label>
    <type>Url</type>
</CustomField>