force-app/main/default/objects/dataDriverInformation__c/fields/www__c.field-meta.xml
<CustomField>
    <fullName>www__c</fullName>
    <label>www</label>
    <type>Url</type>
</CustomField>