force-app/main/default/objects/dataDriverInformation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>importDate__c</columns>
    <columns>batchFileType__c</columns>
    <columns>mvnr__c</columns>
    <columns>konr__c</columns>
    <columns>stor__c</columns>
    <columns>bumo__c</columns>
    <columns>abrd__c</columns>
    <columns>resn__c</columns>
    <columns>tel__c</columns>
    <filterScope>Everything</filterScope>
    <label>Alle registreringer</label>
</ListView>